--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,3 @@
 dypatil.provider.getcourse.url=http://localhost:8081/provider-service/getAllCources
+dypatil.provider.insertCourse.url=http://localhost:8081/provider-service/saveCourse
+
